# gateways_tutorial_app

./: MANIFEST.in  README.md  settings_local.py  setup.cfg
gateways_tutorial_app/: apps.py  urls.py  views.py
gateways_tutorial_app/output_views/: gaussian_eigenvalues_view.py
gateways_tutorial_app/static/gateways_tutorial_app/: README.md
gateways_tutorial_app/templates/gateways_tutorial_app/: hello.html
